--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,7 @@
         }); %>
     </select>
 
+    <% if( typeof note !== 'undefined' || typeof source !== 'undefined' ) { %>
     <a class="ptrnlib-toggle" href="#ptrnlib-docs">Details</a>
-
+    <% } %>
 </div>
