--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,26 @@
 <input type="text" id="ptrnlib-filter" class="ptrnlib-filter" placeholder="filter patterns"/>
 <div class="ptrnlib-container">
 
+    <ul class="ptrnlib-list">
     <% _.forOwn(patterns, function(pattern) {
     if( typeof pattern.category !== 'undefined' && pattern.category === true ){ %>
-        <% _.forEach(pattern.patterns, function(pattern) { %>
-        <a data-slug="<%= pattern.slug %>" href="patterns/<%= pattern.slug %>.html" class="ptrnlib-overview-item">
-            <h2><%= pattern.title %><span> in <%= pattern.category %></span></h2>
-        </a>
-        <% }); %>
+        <li class="ptrnlib-list__category is-visible">
+            <div><%= pattern.title %></div>
+            <ul class="ptrnlib-list">
+                <% _.forEach(pattern.patterns, function(pattern) { %>
+                <li class="ptrnlib-list__item is-visible" data-slug="<%= pattern.slug %>">
+                    <a class="ptrnlib-list__link"  href="patterns/<%= pattern.slug %>.html"><%= pattern.title %></a>
+                </li>
+                <% }); %>
+            </ul>
+        </li>
     <% } else { %>
-    <a data-slug="<%= pattern.slug %>" href="patterns/<%= pattern.slug %>.html" class="ptrnlib-overview-item">
-        <h2><%= pattern.title %> <% if( typeof pattern.category !== 'undefined' ) {%><span> in <%= pattern.category %></span><%} %></h2>
-    </a>
+    <li class="ptrnlib-list__item is-visible" data-slug="<%= pattern.slug %>">
+        <a class="ptrnlib-list__link"  href="patterns/<%= pattern.slug %>.html">
+            <%= pattern.title %> <% if( typeof pattern.category !== 'undefined' ) {%><span> in <%= pattern.category %></span><%} %>
+        </a>
+    </li>
     <% }
     }); %>
+    </ul>
 </div>
