--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -23,16 +23,19 @@
         <%= header %>
 
         <div class="ptrnlib-pattern__details">
-                <% if(typeof note !== 'undefined') { %>
-                    <div class="ptrnlib-pattern__docs">
-                        <%= note %>
-                    </div>
-                <% } %>
+            <% if(typeof note !== 'undefined' && note) { %>
+                <div class="ptrnlib-pattern__docs">
+                    <%= note %>
+                </div>
+            <% } %>
 
-            <div class="ptrnlib-pattern__markup">
-                <h2>Source:</h2>
-                <pre class="source"><code class="language-markup"><%- content %></code></pre>
-            </div>
+
+            <% if(typeof source !== 'undefined' && source) { %>
+                <div class="ptrnlib-pattern__markup">
+                    <h2>Source:</h2>
+                    <pre class="source"><code class="language-markup"><%- source %></code></pre>
+                </div>
+            <% } %>
         </div>
 
     </footer>
