--- a/templates/header.html
+++ b/templates/header.html
@@ -3,16 +3,16 @@
     <h1 class="ptrnlib-h1"><a href="/patterns/"><%= rootTitle %></a></h1>
 
     <select class="ptrnlib-nav">
-        <option value="/patterns/">Pattern Index</option>
+        <option value="index.html">Pattern Index</option>
         <% _.forOwn(patterns, function(pattern) {
         if( typeof pattern.category !== 'undefined' && pattern.category === true ){ %>
         <optgroup label="<%= pattern.title %>">
             <% _.forEach(pattern.patterns, function(pattern) { %>
-            <option value="/patterns/patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
+            <option value="patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
             <% }); %>
         </optgroup>
         <% } else { %>
-        <option value="/patterns/patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
+        <option value="patterns/<%= pattern.slug %>.html"><%= pattern.title %></option>
         <% }
         }); %>
     </select>
