--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,7 @@
 
 .ptrnlib-h1 {
     font-size: 30px;
-    margin-bottom: 0;
-    margin-right: 20px;
+    margin: 0 20px 0 0;
 }
 
 .ptrnlib-title {
