--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .ptrnlib {
     margin: 0;
-    padding-bottom: 60px;
+    padding-top: 60px;
 }
+
 .ptrnlib:after {
     content: "";
     display: none;
@@ -37,13 +38,11 @@
 .ptrnlib-header {
     z-index: 200;
     width: 100%;
-    border-top: solid 4px #eee;
     background-color: #fff;
     color: #444;
     font-family: sans-serif;
     position: fixed;
-    bottom: -60px;
-    opacity: 0.5;
+    top: 0;
     left: 0;
     width: 100%;
     -webkit-box-sizing: border-box;
@@ -56,70 +55,35 @@
 
 .ptrnlib.is-active .ptrnlib-header{
     opacity: 1;
-    bottom: 0;
 }
 
 .ptrnlib.is-active.is-expanded .ptrnlib-header {
     height: 90%;
 }
 
-.ptrnlib-handle {
-    position: absolute;
-    top: -25px;
-    left: 50%;
-    margin-left: -25px;
-    display: block;
-    text-indent: 104%;
-    overflow: hidden;
-    white-space: nowrap;
-    width: 50px;
-    height: 25px;
-    background: #fff;
-    border: solid 2px;
-    border-color: #eee;
-    border-radius: 6px 6px 0 0;
-    border-width: 3px 3px 0;
-}
-
-.ptrnlib-handle:after {
-    content: "▲";
-    position: absolute;
-    top: -3px;
-    left: 0;
-    color: inherit;
-    font-size: 24px;
-    text-indent: 0;
-    width: 100%;
-    text-align: center;
-    -webkit-transform: scale( 0.6 );
-    -ms-transform: scale( 0.6 );
-    transform: scale( 0.6 );
-}
-
-.ptrnlib.is-active .ptrnlib-handle:after {
-    content: "▼";
-}
-
-.ptrnlib-handle:hover,
-.ptrnlib-handle:focus {
-}
-
 .ptrnlib-header__inner {
     padding: 10px 20px;
+    border-bottom: solid 1px #eee;
+}
+
+.ptrnlib-header__status {
+    position: absolute !important;
+    top: 10px;
+    right: 10px;
 }
 
 .ptrnlib-toggle {
     padding: 2px 5px;
-    background: #eee;
+    background: #e3e3e3;
+    color: #999;
     border-radius: 4px;
     font-size: 14px;
 }
 .ptrnlib-toggle:before {
-    margin-right: 5px;
     top: -1px;
     position: relative;
-    display: inline-block;
-    content: "+";
+    display: inline;
+    content: "+\a0";
 }
 
 .ptrnlib.is-expanded .ptrnlib-toggle {
@@ -128,7 +92,7 @@
 }
 
 .ptrnlib.is-expanded .ptrnlib-toggle:before {
-    content: "×";
+    content: "×\a0";
 }
 
 .ptrnlib-h1,
@@ -139,20 +103,13 @@
 }
 
 .ptrnlib-h1 {
-    font-size: 30px;
+    font-size: 20px;
     margin: 0 20px 0 0;
 }
 
-.ptrnlib-title {
-    float: left;
-    margin: 0;
-    font-size: 18px;
-}
-
-.ptrnlib-title a {
-    color: #444;
-    text-decoration: none;
-}
+/**
+ * Pattern selection
+*/
 
 .ptrnlib-nav {
     display: inline-block;
@@ -167,24 +124,18 @@
     margin-right: 20px;
 }
 
-.ptrnlib-pattern__overview {
-    font-family: sans-serif;
-    padding-bottom: 30px;
-    border-bottom: 1px solid #eee;
-    margin-bottom: 30px;
-}
-
-
-
-.ptrnlib-pattern__overview *:last-child {
-    margin-bottom: 0;
-}
-
+/**
+ * Overlay details modal
+ */
 
 .ptrnlib-pattern__details {
+    background-color: #fff;
+    background-color: rgba( 255,255,255, 0.98 );
     display: none;
     overflow: auto;
     width: 100%;
+    opacity: 0.0001;
+    border-bottom: solid 2px #eee;
 }
 
 .ptrnlib.is-expanded .ptrnlib-pattern__details {
@@ -194,13 +145,17 @@
     position: absolute;
     bottom: 0;
     left: 0;
+     -webkit-animation: patternShow 0.3s ease;
+    animation: patternShow 0.3s ease-out;
+
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 
 .ptrnlib-pattern__markup,
 .ptrnlib-pattern__docs {
     padding: 1em;
-    border-top: solid 1px #eee;
 }
 
 .ptrnlib-pattern__markup {
@@ -211,7 +166,15 @@
 
 .ptrnlib-pattern__markup pre {
     font-size: 14px;
+    background-color: #f9f9f9;
+    border-radius: 3px;
+    border: solid 1px #eee;
+    padding: 20px;
 }
+
+/**
+ * Index pattern list
+ */
 
 .ptrnlib-list,
 .ptrnlib-list ul {
@@ -264,79 +227,78 @@
     transition: 0.3s ease-out;
 }
 
-.ptrnlib-overview-item {
-    display: none;
-    padding: 15px;
-    border-bottom: 1px solid #eee;
-    font-family: sans-serif;
-    color: #444;
-    text-decoration: none;
-}
 
-.ptrnlib-overview-item:hover {
-    background-color: #f8f8f8;
-}
+/**
+ * Status icons
+ */
 
-.ptrnlib-overview-item.is-visible {
-    display: block;
-    opacity: 1;
-     -webkit-animation: patternShow 0.35s ease;
-    animation: patternShow 0.35s ease-out;
-}
-
-.ptrnlib-overview-item h2 {
-    margin-top: 0;
+.ptrnlib-status {
+    width: 28px;
+    height: 28px;
+    float: right;
+    text-indent: 103%;
+    white-space: nowrap;
+    overflow: hidden;
     position: relative;
+    line-height: 28px;
+    border-radius: 14px;
 }
 
-.ptrnlib-overview-item h2 span {
-    color: #aaa;
-    font-size: 14px;
+.ptrnlib-status:before {
+    content: "";
+    display: inline;
+    width: 100%;
+    text-indent: 0;
     position: absolute;
-    right: 0;
-    bottom: 2px;
-    display: block;
+    top: 0;
+    left: 0;
+    text-align: center;
+    font-family: serif;
+    font-size: 18px;
 }
 
-
-.ptrnlib-overview-item h2 {
-    margin-top: 0;
-    margin-bottom: 8px;
-    font-size: 20px;
+.ptrnlib-status--not-started {
+    background-color: #e3e3e3;
+    color: #999;
 }
 
-.ptrnlib-overview-item p {
-    margin-top: 0;
+.ptrnlib-status--not-started:before {
+    content: "\00D7";
 }
 
-.ptrnlib-overview-item *:last-child {
-    margin-bottom: 0;
+.ptrnlib-status--in-progress {
+    background-color: #f0cfa0;
+    color: #c69558;
 }
 
-@media screen and (max-width: 560px) {
+.ptrnlib-status--in-progress:before {
+    content: "\21E5";
+}
+
+.ptrnlib-status--done {
+    background-color: #c1e4a5;
+    color: #7bb64a;
+}
+
+.ptrnlib-status--done:before {
+    content: "\2713";
+}
+
+/**
+ * Narrow viewport styles
+ */
+
+@media screen and (max-width: 620px) {
     body {
         padding-bottom: 40px;
     }
 
-    .ptrnlib-view-type {
-        clear: right;
-    }
-
-    .ptrnlib-header {
-        bottom: -40px;
-    }
-
-    .ptrnlib-header h1 {
-        font-size: 24px;
-    }
-
-    .ptrnlib-overview-item h2 span {
-        display: block;
-        position: static;
-    }
-
     .ptrnlib-h1 {
         display: none;
+    }
+
+    .ptrnlib-list__item {
+        font-size: 16px;
     }
 
     .ptrnlib-header__inner {
@@ -346,17 +308,33 @@
         display: flex;
     }
 
-    .ptrnlib-header__inner .ptrnlib-nav,
-    .ptrnlib-header__inner .ptrnlib-toggle {
+    .ptrnlib-toggle {
+        min-width: 70px;
+    }
 
+    .ptrnlib-header__status {
+        top: 7px;
+    }
+
+    .ptrnlib-header__inner {
+        padding-right: 60px;
     }
 }
 
+
+/**
+ * Overlay animation
+ */
+
 @-webkit-keyframes patternShow {
     from {
+        -webkit-transform: translateY( -5px );
+        transform: translateY( -5px );
         opacity: 0.001;
     }
     to {
+        -webkit-transform: translateY( -5px );
+        transform: translateY( 0 );
         opacity: 1;
     }
 }
